# kineticABC

./: CMakeLists.txt  CMakeLists.txt_diffJsonLink  EEDF.h  ElectricField.h  GIT_NOTES.txt  Gas.h  HDF5FileTools.h  HDF5dataFile.h  HDF5dataFile.h_save  N2_Itikawa.mph  N2_testing.mph  NOTES.txt  READ_ME  SOURCE_ME  energyGrid.h  hdf5AppendExample.txt  input.json  input.json_Itikawa  input.json_test1  input.json_test2  input_file.json  main.cpp  main.cpp_save  main.cpp_while  setHDF5HOME  testingLoopIndexing.m  timeDependent2TermPresentation.pptx  timeDomain.h  xsecsN2.txt  xsecsN2_Itikawa.txt  xsecsN2_Itikawa_COMSOL.txt  xsecsN2_test1.txt  xsecsN2_test2.txt
Helium/: He4Test1.m
Helium/EN10/: CMakeCache.txt  He4Test1.m~  input.json  output.h5
Helium/EN100/: Makefile  input.json
Helium/EN1000/: He4Test1.m  input.json  tdb
Helium/EN200/: He4_ExcEff_ABC.txt  HeliumXsecsMacro_forTITTS.txt  cmake_install.cmake  input.json
Nitrogen/: nitrogenTwoTerm.m  paramsVsEN.m
Nitrogen/1000Td/: input.json  xsecsN2_Itikawa.txt
Nitrogen/6MVpm/: input.json
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  output.h5  test
buildSave/: CMakeCache.txt  Makefile  cmake_install.cmake  output.h5  test
cmake/Modules/: gmock.cmake
postProcessingScripts/: EEDF_testingInelastic_notWorking.eps  ExcSource_testingInelastic_notWorking.eps  comsolResults.m  test1.m  test2.m  testing.m  testingHDF5.m
src/: CMakeLists.txt  EEDF.h  ElectricField.h  Gas.h  HDF5dataFile.h  energyGrid.h  main.cpp  timeDomain.h
test1/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake  output.h5  tdb  test  test1.eps  test1.m
test2/: CMakeCache.txt  EEDF_100Td.eps  Makefile  N2_test2.mph  N2comsolResults.mat  cmake_install.cmake  loadCOMSOLResults.m  output.h5  test2.m  timeDependent2TermPresentation.pptx  xsecsN2_Itikawa.txt
test3/: CMakeCache.txt  Makefile  N2_test3.mph  NOTES.txt  cmake_install.cmake  input.json  output.h5  tdb  test  test3.m  test3ZeroSharing.eps
test4/: CMakeCache.txt  Makefile  NOTES.txt  cmake_install.cmake  comsolResultsN2_test3.mat  loadCOMSOLResults.m  tdb  test3EqualSharing.eps  test4.m
thisbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  input.json  tdb  xsecsN2_elmOnly.txt
xsecFiles/: xsecsAr.txt  xsecsConst.txt  xsecsN2_Itikawa.txt  xsecsN2_Itikawa_COMSOL.txt  xsecs_nitrogen.txt
